# print-srv

./: Cargo.toml  disable_cups.sh  enable_cups.sh
src/: main.rs
src/ippresponse/: attributes.rs  builder.rs  mod.rs
src/printer/: charset.rs  compression.rs  ippversion.rs  job.rs  jobstate.rs  mimemediatype.rs  mod.rs  naturallanguage.rs  operation.rs  pdloverride.rs  printerstate.rs  uri.rs
test/: CUPS_LICENSE.txt  create-job.test  get-printer-attributes.test  print-job.test  validate-job.test
