[package]
name = "print-srv"
version = "0.1.0"
authors = ["Toby Sullivan <tobyjsullivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
futures = "0.3.12"
hyper = {version = "0.14.2", features = ["http1", "server", "runtime", "tcp"]}
ipp = "2.0.0"
log = "0.4"
num-traits = "0.2.14"
tokio = {version = "1.0.2", features = ["full"]}
